[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "downsorter"
version = "0.2.0"
description = "Organize files by extension into category folders from the command line."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
keywords = ["downloads", "file sorting", "organization", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
downsorter = "sorter:main"

[tool.setuptools]
py-modules = ["sorter"]
